# SimpleCHash

./: CMakeLists.txt  README.md
include/: .hash.h.swp  hash.h
src/: .hash.c.swp  .main.c.swp  hash.c  main.c
